arrumando relação dados entre entidades e tabelas

--- a/src/main/webapp/novo.xhtml
+++ b/src/main/webapp/novo.xhtml
@@ -34,7 +34,7 @@
                                         <div class="product-list-detail">
                                             <div class="product-name">#{item.nome}
                                                 <div class="product-avaliacao">
-                                                    <p:selectOneRadio id="console" value="#{item.avaliacao.resposta}" unselectable="false"> <!--<não puxa: item.avaliacao.resposta>-->
+                                                    <p:selectOneRadio id="console" value="" unselectable="false"> <!--<não puxa: item.avaliacao.resposta>-->
                                                         <f:selectItem itemLabel="Sim" itemValue="Sim"/>
                                                         <f:selectItem itemLabel="Não" itemValue="Não"/>
                                                         <f:selectItem itemLabel="N/A" itemValue="N/A"/>
