--- a/src/main/webapp/novo_3.xhtml
+++ b/src/main/webapp/novo_3.xhtml
@@ -66,7 +66,7 @@
                                              required="false" requiredMessage="Local é obrigatório!"
                                              filter="true" filterMatchMode="startsWith">
                                 <f:selectItem itemLabel="Selecione o local:"/>
-                                <f:selectItems value="#{inspecaoC.comboLugar}"/>
+                                <f:selectItems value="#{inspecaoC.comboEmpreendimentos}"/>
                             </p:selectOneMenu>
 
                             <p:outputLabel for="item" value="Item:" />
