--- a/src/main/webapp/novo_4.xhtml
+++ b/src/main/webapp/novo_4.xhtml
@@ -65,7 +65,7 @@
                                              required="true" requiredMessage="Nome empreendimento é obrigatório!"
                                              filter="true" filterMatchMode="startsWith">
                                 <f:selectItem itemLabel="Selecione o local:"/>
-                                <f:selectItems value="#{inspecaoC.comboLugar}"/>
+                                <f:selectItems value="#{inspecaoC.comboEmpreendimentos}"/>
                             </p:selectOneMenu>
                            
                             <!--primeira coluna-->
