adição compo observação no salvar inspecao, inicio pesquisa inspecao e relatorio pdf

--- a/src/main/webapp/categoria.xhtml
+++ b/src/main/webapp/categoria.xhtml
@@ -21,9 +21,9 @@
                             <p:outputLabel for="nome" value="Nome:" />
                             <p:inputText id="nome" value="#{categoriaC.categoria.nome}" 
                                          required="true" requiredMessage="Nome é obrigatório!"/>
-                            <p:outputLabel for="nomeEspecifico" value="Nome especifico:" />
+<!--                            <p:outputLabel for="nomeEspecifico" value="Nome especifico:" />
                             <p:inputText id="nomeEspecifico" value="#{categoriaC.categoria.nomeEspecifico}"
-                                         required="false" requiredMessage="Nome é obrigatório!" />
+                                         required="false" requiredMessage="Nome é obrigatório!" />-->
 <!--                            <p:outputLabel value="Itens:" />      
                             <p:dataTable var="itens" value="#{itemC.item}">
                                 <p:column headerText="Nome">
