inicio controle usuário, tela login, adição imagens referência tela login

--- a/src/main/webapp/usuario.xhtml
+++ b/src/main/webapp/usuario.xhtml
@@ -9,7 +9,7 @@
         <!--<h1 class="aw-page-title">Título da sua página</h1>-->
 
         <p:panel id="painel_conteudo" header="Usuário" >
-            <p:tabView id="tab_view" activeIndex="#{usuarioC.aba}">
+            <p:tabView id="tab_view" activeIndex="">
                 
                 <!--aba para cadastrar e alterar-->
                 <p:tab title="Novo">
