--- a/src/main/webapp/item.xhtml
+++ b/src/main/webapp/item.xhtml
@@ -34,7 +34,7 @@
                             </p:selectOneMenu>
                             <p:outputLabel for="nome" value="Descrição:" />
                             <p:inputTextarea  id="nome" value="#{itemC.item.nome}" 
-                                              required="true" requiredMessage="Nome é obrigatório!"/>
+                                              required="true" requiredMessage="Descrição é obrigatório!"/>
 
                             <!--primeira coluna-->
                             <p:commandButton value="Salvar" action="#{itemC.salvar()}"  update="@all" />
